Fixed switch default case

--- a/docs/unit6.mdx
+++ b/docs/unit6.mdx
@@ -246,7 +246,7 @@ switch (name) {
 		// Here, 'Chase' and 'Raman' should print the same thing
 		console.log('Projects Co-Chair');
 		break;
-	case default:
+	default:
 		console.log("That name isn't in Projects Committee");
 		break;
 }
