Added lecture video

--- a/docs/unit6.mdx
+++ b/docs/unit6.mdx
@@ -13,8 +13,8 @@ JavaScript is the world's most popular programming language, also considered the
 Many web developers use JavaScript to create websites and add behavior to them.
 
 ## Unit 6 Lecture Video
-<!-- TODO
-<Video src="https://www.youtube.com/embed/x_J0zAbFx5Y" /> -->
+
+<Video src="https://www.youtube.com/embed/Y1sL0tizxDU" />
 
 <Video src="https://www.youtube.com/embed/DHjqpvDnNGE" />
     
