--- a/docs/unit7.mdx
+++ b/docs/unit7.mdx
@@ -404,7 +404,7 @@ npm start
 
 This will run the react app, and you will be able to see it in your browser. It will open automatically in your default browser and you will be able to see the base React project. If it doesn't open up, scroll up in your terminal, and it will tell you the URL you can find the react app at. Mine is **http://localhost:3000**
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8f6ba7f9-1638-40d0-81e7-5d2d83c07256/Untitled.png)
+![React Compiled Terminal Output](../static/img/unit7/react-compiled.png)
 
 ## Deploying React to GitHub Pages
 
