Updated video and form urls

--- a/docs/unit7.mdx
+++ b/docs/unit7.mdx
@@ -14,7 +14,7 @@ It's time to talk about one of the most popular JavaScript libraries for buildin
 ## Unit 7 Lecture Video
 
 
-<Video src="https://www.youtube.com/embed/x_J0zAbFx5Y" />
+<Video src="https://www.youtube.com/embed/b2UqdLAT07w" />
 
 <Video src="https://www.youtube.com/embed/Tn6-PIqc4UM" />
 
@@ -463,8 +463,7 @@ Monday, May 16th at 11:59pm
 
 Complete the [Google Form](https://forms.gle/ufBweAsXoBxsDwhm8)
 
-<iframe src="https://forms.gle/ufBweAsXoBxsDwhm8" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfFZI3n42hXvhz88MhanmZEfuchfyiF1Qe8v35IJT8qPVJWbA/viewform?embedded=true" width="100%" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 ## External Resources
 
