Add a note about video discrepancies

--- a/docs/unit10.mdx
+++ b/docs/unit10.mdx
@@ -12,6 +12,11 @@ In your final unit, you'll use the skills learned throughout the fellowship to m
 ## Unit 10 Lecture Video
 <Video src="https://www.youtube.com/embed/jk3LCtFAb9Y" />
 
+:::note
+The ICSSC Github Organization was renamed from "ICSSC Projects" to just "ICSSC".  
+Also, some of the AntAlmanac code seen in the video may look different from the current state of the project.
+:::
+
 ## What is Open Source?
 Open source software projects have their source code completely available for anyone to use and improve.
 Most open source projects have their code on GitHub.
