Change all instances of 'week' to 'unit'

--- a/docs/unit1.mdx
+++ b/docs/unit1.mdx
@@ -9,7 +9,7 @@ import Video from '@site/src/components/Video';
 
 ## Welcome to Unit 1 👋
 
-This week we are going to briefly cover GitHub, READMEs, Markdown, and GitHub Profiles. This is a shorter unit to get the Fellowship started. You may even already be familiar with some of these concepts. 
+This unit we are going to briefly cover GitHub, READMEs, Markdown, and GitHub Profiles. This is a shorter unit to get the Fellowship started. You may even already be familiar with some of these concepts. 
 
 ## Unit 1 Lecture Video
 
@@ -100,8 +100,8 @@ Some people get really fancy with these. Here are a few [Awesome GitHub Profile 
 
 ## Assignment
 
-Your assignment this week is to create a [GitHub account](https://github.com/signup) and add a GitHub Profile README. 
-Already have one? Great! You can relax this week or continue to improve it.
+Your assignment for this unit is to create a [GitHub account](https://github.com/signup) and add a GitHub Profile README. 
+Already have one? Great! You can relax or continue to improve it.
 
 Here's a guide on [creating your GitHub profile README](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-github-profile/customizing-your-profile/managing-your-profile-readme). 
 
