--- a/docs/unit3.mdx
+++ b/docs/unit3.mdx
@@ -9,7 +9,7 @@ import Video from '@site/src/components/Video';
 
 ## Welcome to Unit 3
 
-This week, we'll be combining what we've done in the past 2 weeks, to learn more about Git, and how you can use it in your terminal.
+This unit, we'll be combining what we've done in the past 2 units, to learn more about Git, and how you can use it in your terminal.
 
 ## Unit 3 Lecture Video
 
