--- a/docs/unit4.mdx
+++ b/docs/unit4.mdx
@@ -9,7 +9,7 @@ import Video from '@site/src/components/Video';
 
 ## Welcome to Unit 4 🌐
 It's finally time to start learning about web development! 
-This week we'll get started on your personal website and cover the basics of HTML and CSS.
+This unit we'll get started on your personal website and cover the basics of HTML and CSS.
 
 ## Unit 4 Lecture Video
 
@@ -304,7 +304,7 @@ Now, whenever you push a new commit to the `main` branch of your repository, the
 
 ## Assignment
 
-This week, we are going to start development on your very own personal website and get it deployed with GitHub Pages! The requirements to complete the assignment are fairly simple but try your best to make your site look good :)
+This unit, we are going to start development on your very own personal website and get it deployed with GitHub Pages! The requirements to complete the assignment are fairly simple but try your best to make your site look good :)
 
 **Required Tasks**
 
