--- a/docs/unit5.mdx
+++ b/docs/unit5.mdx
@@ -9,7 +9,7 @@ import Video from '@site/src/components/Video';
 
 ## Welcome to Unit 5
 
-This week we take a quick detour to discuss personal branding! When it comes to your career, professional development is just as important as software development.
+This unit we take a quick detour to discuss personal branding! When it comes to your career, professional development is just as important as software development.
 
 ## Unit 5 Lecture Video
 
@@ -208,7 +208,7 @@ By default your LinkedIn URL is your name+random characters. This looks unprofes
 
 ## Assignment
 
-This week, your assignment is to create a resume and a LinkedIn.
+This unit, your assignment is to create a resume and a LinkedIn.
 
 ### Deliverables
 
