--- a/docs/unit6.mdx
+++ b/docs/unit6.mdx
@@ -407,7 +407,7 @@ node hello.js
 
 ## Assignment
 
-This week's assignment is to complete a series of programming problems use Javascript.
+This unit's assignment is to complete a series of programming problems use Javascript.
 
 **Required Tasks**
 - Fork the [javascript-practice](https://github.com/icssc/javascript-practice) GitHub Repository.
