--- a/docs/unit7.mdx
+++ b/docs/unit7.mdx
@@ -435,7 +435,7 @@ npm run deploy
 
 ## Assignment
 
-This week, we will be making a website showing off our favorite UCI classes. There will be a text input field to type in a class, and an add button, to add a new class to our list!
+This unit, we will be making a website showing off our favorite UCI classes. There will be a text input field to type in a class, and an add button, to add a new class to our list!
 
 **Required Tasks**
 
