--- a/docs/unit8.mdx
+++ b/docs/unit8.mdx
@@ -293,7 +293,7 @@ Check it out here: [PeterPortal API Docs](https://api.peterportal.org/)
 
 ## Assignment
 
-For the assignment this week, we will be building off of last week's project and make requests to the PeterPortal API to display some data!
+For the assignment this unit, we will be building off of last unit's project and make requests to the PeterPortal API to display some data!
 
 **Required Tasks**
 
