--- a/docs/unit9.mdx
+++ b/docs/unit9.mdx
@@ -9,7 +9,7 @@ import Video from '@site/src/components/Video';
 
 ## Welcome to Unit 9
 
-This week, we'll be learning about TypeScript a strict superset of JavaScript.
+This unit, we'll be learning about TypeScript a strict superset of JavaScript.
 It has all of JavaScript's features, but also adds on TypeScript type's system. 
 
 ## Unit 9 Lecture Video
@@ -240,7 +240,7 @@ There are lots of cool things VSCode can do for us to help us be more efficient 
 
 ## Assignment
 
-We learned about TypeScript this week, but for this topic, there will only be a quiz. 
+We learned about TypeScript this unit, but for this topic, there will only be a quiz. 
 For your real assignment, you will be polishing your personal websites, so you can show off to potential employers. 
 Feel free to use whatever you want. (React, HTML and CSS, React in TypeScript ⁉️)
 
