--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -160,7 +160,7 @@ For `.zshrc`, please refer to this [ZSH Prompt Guide](https://blog.devgenius.io/
 
 ## Assignment
 
-This week, your assignment will be to create a specific file directory structure using terminal commands. Once completed, you will send a screenshot of your terminal with the commands you ran and their respective outputs.
+This unit, your assignment will be to create a specific file directory structure using terminal commands. Once completed, you will send a screenshot of your terminal with the commands you ran and their respective outputs.
 
 1. Choose a folder you would like to do your projects in. In this case, I chose `/Users/name/Documents`
 2. Create a directory called `Fellowship` and then create another directory inside called `Unit2`.
@@ -208,7 +208,7 @@ Call the first one `vim.txt` and the second one `nano.txt`.
 
 ### Submission
 
-Send your screenshot in the Discord channel and complete [the quiz](https://forms.gle/huFVCdN48dcfty256) for this week.
+Send your screenshot in the Discord channel and complete [the quiz](https://forms.gle/huFVCdN48dcfty256) for this unit.
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn3Mrv8_RShKjSLfD-th7L0LrNWVyXjtfEuQzz_EWMFhwGHQ/viewform?embedded=true" width="100%" height="3400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
