Update unit 5 assignment to reference new Discord channels

--- a/docs/unit5.mdx
+++ b/docs/unit5.mdx
@@ -225,8 +225,8 @@ This unit, your assignment is to create a resume and a LinkedIn.
 
 **Optional** **Stretch Goals**
 
-- Post your LinkedIn url in the Discord thread and connect with others in the Fellowship!
-- Sign up to review another resume on the submission form.
+- Post your LinkedIn url in the #networking Discord channel to connect with others in the Fellowship!
+- Post your resume in the #resume-reviews Discord channel and provide feedback on someone else's resume!
 
 
 ### Submission
