Update unit 10 to use 'good first task' instead of 'fellowship' tag

--- a/docs/unit10.mdx
+++ b/docs/unit10.mdx
@@ -12,9 +12,11 @@ In your final unit, you'll use the skills learned throughout the fellowship to m
 ## Unit 10 Lecture Video
 <Video src="https://www.youtube.com/embed/jk3LCtFAb9Y" />
 
-:::note
-The ICSSC Github Organization was renamed from "ICSSC Projects" to just "ICSSC".  
-Also, some of the AntAlmanac code seen in the video may look different from the current state of the project.
+:::caution Recent Changes
+A few important changes have been made since this video was created:
+- The `fellowship` tag has been replaced with the `good first task` tag.
+- The ICSSC Github Organization was renamed from "ICSSC Projects" to just "ICSSC".  
+- Also, some of the AntAlmanac code seen in the video may look different from the current state of the project.
 :::
 
 ## What is Open Source?
@@ -23,7 +25,7 @@ Most open source projects have their code on GitHub.
 This makes it extremely easy for people to contribute to them. 
 
 :::note Fun Fact
-ICSSC projects are all open sourced. Over 50 students have contributed to the projects!
+ICSSC projects are all open sourced. Over 100 students have contributed to the projects!
 :::
 
 ## Making an Open Source Contribution
@@ -65,16 +67,16 @@ The pull request should be automatically updated.
 ## Assignment
 
 Your final task for the Fellowship will be to make a contribution to one of the [ICSSC Projects](https://github.com/icssc)!
-We've set aside some simple issues with the `Fellowship` tag for y'all to work on.
+We've set aside some simple issues with the `good first task` tag for y'all to work on.
 
-- [AntAlmanac Issues](https://github.com/icssc/AntAlmanac/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- [PeterPortal API Issues](https://github.com/icssc/peterportal-public-api/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- [PeterPortal Client Issues](https://github.com/icssc/peterportal-client/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- [Zotistics Issues](https://github.com/icssc/Zotistics/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- [Fellowship Website Issues](https://github.com/icssc/fellowship/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
+- [AntAlmanac Issues](https://github.com/icssc/AntAlmanac/issues?q=is%3Aissue+is%3Aopen+label%3A"good+first+task")
+- [PeterPortal API Issues](https://github.com/icssc/peterportal-public-api/issues?q=is%3Aissue+is%3Aopen+label%3A"good+first+task")
+- [PeterPortal Client Issues](https://github.com/icssc/peterportal-client/issues?q=is%3Aissue+is%3Aopen+label%3A"good+first+task")
+- [Zotistics Issues](https://github.com/icssc/Zotistics/issues?q=is%3Aissue+is%3Aopen+label%3A"good+first+task")
+- [Fellowship Website Issues](https://github.com/icssc/fellowship/issues?q=is%3Aissue+is%3Aopen+label%3A"good+first+task")
 
 Once you've found an issue that you like, leave a comment on it to claim the task.
-You are only allowed to do one issue with the `Fellowship` tag because we want to make sure there are enough tasks for everyone.
+You are only allowed to do one issue with the `good first task` tag because we want to make sure there are enough tasks for everyone.
 
 However you are not limited to just these issues.
 If you'd rather try a harder issue or if have your own idea for how to improve a project, feel free to do so!
