--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -190,7 +190,7 @@ Call the first one `vim.txt` and the second one `nano.txt`.
     cat vim.txt
     ```
     
-5. Take a screenshot of your output. It should match the example below! Post your screenshot under [Unit 2 thread](https://ptb.discord.com/channels/772739905981644850/927468256070086696/930540634224345119) in the `#announcements`channel. 
+5. Your output should match the example below: 
     
     ![Submission](../static/img/unit2/submission.png)
     
@@ -198,7 +198,7 @@ Call the first one `vim.txt` and the second one `nano.txt`.
 ### Deliverables
 
 **Required Tasks**
- - Follow the directions above to set up your project directory. Take a screenshot and post it in the announcements thread.
+ - Follow the directions above to practive using the terminal.
  - Complete the [Quiz](https://forms.gle/1whc3n6FjNNoq5ye9)
 
 **Optional** **Stretch Goals**
