--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -198,7 +198,7 @@ Call the first one `vim.txt` and the second one `nano.txt`.
 ### Deliverables
 
 **Required Tasks**
- - Follow the directions above to practive using the terminal.
+ - Follow the directions above to practice using the terminal.
  - Complete the [Quiz](https://forms.gle/1whc3n6FjNNoq5ye9)
 
 **Optional** **Stretch Goals**
